# chatmcp

./: README.md
agents/: __init__.py  agents_in_action.py  demo_unified_agents.py  example_test.py  fast_example_test.py  mcp-config.json  mcp_server.py  mcp_server_simple.py  mcp_tools_client.py  practical_example.py  quick_test.py  requirements.txt  simple_mcp.py  test_mcp_connection.py  useful_demo.py
agents/agents/: README.md  data_extraction_agent.py  followup_agent.py  notification_agent.py
agents/mcp_server_simple/: __init__.py  __main__.py
agents/shared/: config.py  types.py  utils.py
agents/tools/: database.py  email.py  file_operations.py
chatbot-ui/: CLAUDE.md  README.md  debug-mcp.js  package-lock.json  package.json  test-api.js  test-chat-request.js  test-mcp-connection.js  test-mcp-tools.js  test-mcp.js
chatbot-ui/app/[locale]/: layout.tsx  page.tsx
chatbot-ui/components/sidebar/: sidebar-create-buttons.tsx  sidebar-data-list.tsx  sidebar-switcher.tsx  sidebar.tsx
chatbot-ui/components/ui/: brand.tsx
chatbot-ui/components/utility/: global-state.tsx
chatbot-ui/context/: context.tsx
chatbot-ui/lib/mcp/: mcp-client.ts  mcp-integration.ts  multi-mcp-client.ts
chatbot-ui/public/: manifest.json
chatbot-ui/types/: content-type.ts
firecrawl-mcp/: .env  README.md  mcp-config.json
mcp1/: .env.example  README.md  package.json  pyproject.toml
mcp1/mcp_postgres/: __init__.py  server.py
mcp2/: .env.example  README.md  pyproject.toml
mcp2/mcp_email/: __init__.py  server.py
mcpquickstart/: llms-full.txt
(+7 files in other folders)
