[project]
name = "mcp-postgres-server"
version = "1.0.0"
description = "MCP server for PostgreSQL database interaction"
dependencies = [
    "mcp>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
mcp-postgres = "mcp_postgres.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_postgres*"]