[project]
name = "mcp-email-manager"
version = "1.0.0"
description = "MCP server for email management and client follow-up automation"
dependencies = [
    "mcp>=1.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.0.0",
    "microsoft-graph-auth>=0.1.0",
    "msgraph-core>=1.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "email-validator>=2.0.0",
    "python-dateutil>=2.8.0"
]

[project.scripts]
mcp-email = "mcp_email.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_email*"]